# rust-daily

./: .gitignore  AGENTS.md  ARCHITECTURE.md  MILESTONE_1_PLAN.md  MILESTONE_3_PLAN.md  MILESTONE_4_PLAN.md  Makefile  README.md  SPEC.md  borrowquest.qzz.io.conf  borrowquest.site.conf  check_refs.py  index.html  package-lock.json  package.json  rust-daily-backend.service  vite.config.ts
backend/: AGENTS.md  Cargo.toml  README.md
backend/src/: api.rs  cargo_output.rs  config.rs  dependency_set.rs  error.rs  lib.rs  main.rs  model.rs  observability.rs  queue.rs  runner.rs  server.rs  service.rs  static_files.rs  workspace.rs
config/: default.yaml  local.yaml  prod.yaml
docker/: README.md  run-advanced-lesson-cargo.sh  run-advanced-lesson-tests.sh  rust-runner.Dockerfile  smoke-advanced-runner.sh
docker/dependency-cache/: Cargo.toml
docker/dependency-cache/src/: lib.rs
docs/: ADVANCED_LESSON_INTEGRATION_PLAN.md  AUTHORING_HARNESS_FEATURE_SPEC.md  AUTHORING_HARNESS_IMPLEMENTATION_PLAN.md  BACKEND_MVP.md  BACKEND_SPEC.md  COMPILE_FAIL_VALIDATION_IMPLEMENTATION_PLAN.md  COMPILE_FAIL_VALIDATION_SPEC.md  CURRICULUM_REVIEW_RUBRIC.md  DEPLOYMENT.md  FRONTEND_BACKEND_INTEGRATION_PLAN.md  FULL_CURRICULUM_BACKLOG.md  FULL_CURRICULUM_IMPLEMENTATION_PLAN.md  FULL_CURRICULUM_SPEC.md  FUTURE_ADVANCED_CONCEPTS_IMPLEMENTATION_PLAN.md  MILESTONE_2_PLAN.md  MILESTONE_5_PLAN.md  MVP_GAP_FIX_PLAN.md  NON_CUMULATIVE_LESSONS.md  PROJECT_SNAPSHOT_VALIDATION_IMPLEMENTATION_PLAN.md  PROJECT_SNAPSHOT_VALIDATION_SPEC.md  SPEC.md  idea.md
frontend/: AGENTS.md  index.html  package.json  (+3 more)
(+701 files in other folders)
