[package]
name = "rust-daily-backend"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"

[dependencies]
actix-cors = "0.7"
actix-files = "0.6"
actix-web = "4"
config = { version = "0.15", default-features = false, features = ["yaml"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1", features = ["v4"] }
